# patrace

./: .gitignore
patrace/doc/: manual.md
patrace/project/android/eglretrace/: build.gradle
patrace/project/android/eglretrace/jni/: Android.mk  NativeAPI.cpp
patrace/project/android/eglretrace/res/values/: .strings.xml.template
patrace/project/android/eglretrace/src/com/arm/pa/paretrace/: NativeAPI.java
patrace/project/android/eglretrace/src/com/arm/pa/paretrace/Activities/: FastforwardActivity.java  RetraceActivity.java  SelectActivity.java
patrace/project/android/egltrace/: build.gradle
patrace/project/android/egltrace/jni/: Android.mk
patrace/project/android/fakedriver/: build.gradle
patrace/project/android/fakedriver/jni/: Android.mk
patrace/project/android/gleslayer/: build.gradle
patrace/project/android/gleslayer/jni/: Android.mk
patrace/project/cmake/: CMakeLists.txt
patrace/project/cmake/drawstate/: CMakeLists.txt
patrace/project/cmake/eglretrace/: CMakeLists.txt  src.cmake
patrace/project/cmake/egltrace/: CMakeLists.txt
patrace/project/cmake/fakedriver/: CMakeLists.txt  src.cmake
patrace/project/cmake/fastforward/: CMakeLists.txt
patrace/project/cmake/gleslayer/: CMakeLists.txt
patrace/project/cmake/newfastforwarder/: CMakeLists.txt
patrace/project/cmake/pat_editor/: CMakeLists.txt
patrace/project/cmake/pat_editor_gui/: CMakeLists.txt
patrace/project/cmake/tool/: CMakeLists.txt
patrace/project/cmake/unittest/: CMakeLists.txt
patrace/project/iOS/: gen_version_info.sh
patrace/python/pypatrace/: setup.py
patrace/src/common/: file_format.hpp  in_file.hpp  in_file_mt.cpp  in_file_mt.hpp  in_file_ra.cpp  in_file_ra.hpp  memory.hpp  os.hpp  os_posix.cpp  out_file.cpp  out_file.hpp  trace_model.cpp  trace_model.hpp
patrace/src/fastforwarder/: fastforwarder.cpp
patrace/src/helper/: shadermod.cpp
patrace/src/retracer/: glstate_images.cpp  glws_egl.cpp  glws_egl_fbdev.cpp  glws_egl_udriver.cpp  glws_egl_wayland.cpp  glws_egl_win.cpp  glws_egl_x11.cpp  retrace.py  retrace_egl.cpp  retrace_main.cpp  retrace_options.hpp  retracer.cpp  retracer.hpp  state.hpp  trace_executor.cpp  trace_executor.hpp
patrace/src/specs/: eglapi.py  gles12api.py
patrace/src/tool/: analyze_trace.cpp  clientsidetrim.cpp  converter.cpp  deduplicator.cpp  parse_interface.cpp  parse_interface.h  parse_interface_retracing.cpp  parse_interface_retracing.hpp  print_dictionary.cpp  replace_shader.cpp  shader_grep.cpp  shader_repacker.cpp  strip.cpp  totxt.cpp  update_dictionary.cpp
patrace/src/tracer/: egltrace.cpp  egltrace.hpp  trace.py
scripts/: build.py  build_all.py  test.sh  test_build.sh  validate_analysis.py
(+1 files in other folders)
